# segment-editor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: mac.yaml  windows.yaml
CMake/: IScoreConfiguration.cmake  IScoreDeployment.cmake  IScoreDeploymentLinux.cmake  IScoreDeploymentOSX.cmake  IScoreDeploymentWindows.cmake  IScoreTargetSetup.cmake
CMake/Configurations/: segment.cmake
CMake/Deployment/Linux/: SEGMent.desktop.in
base/: CMakeLists.txt
base/app/: Application.cpp  Application.hpp  CMakeLists.txt  Info.plist.in  main.cpp
base/lib/: CMakeLists.txt
base/lib/core/application/: ApplicationInterface.cpp  ApplicationInterface.hpp  ApplicationRegistrar.cpp  ApplicationRegistrar.hpp  ApplicationSettings.cpp  ApplicationSettings.hpp  CommandBackupFile.cpp  CommandBackupFile.hpp  MockApplication.hpp  OpenDocumentsFile.cpp  OpenDocumentsFile.hpp  SafeQApplication.cpp  SafeQApplication.hpp
base/lib/core/command/: CommandStack.cpp  CommandStack.hpp  CommandStackSerialization.hpp
base/lib/core/document/: Document.cpp  Document.hpp  DocumentBackupManager.hpp  DocumentBackups.cpp  DocumentBackups.hpp  DocumentBuilder.cpp  DocumentBuilder.hpp  DocumentMetadata.cpp  DocumentMetadata.hpp  DocumentModel.cpp  DocumentModel.hpp  DocumentPresenter.cpp  DocumentPresenter.hpp  DocumentSerialization.cpp  DocumentView.cpp  DocumentView.hpp
base/lib/core/plugin/: PluginDependencyGraph.hpp  PluginManager.cpp  PluginManager.hpp
base/lib/core/presenter/: AboutDialog.cpp  AboutDialog.hpp  CoreApplicationPlugin.cpp  CoreApplicationPlugin.hpp  DocumentManager.cpp  DocumentManager.hpp  Presenter.cpp  Presenter.hpp
base/lib/core/settings/: Settings.cpp  Settings.hpp  SettingsPresenter.hpp  SettingsView.hpp
base/lib/core/undo/: UndoApplicationPlugin.hpp
base/lib/core/view/: QRecentFilesMenu.cpp  Window.cpp  Window.hpp
base/lib/resources/: resources.qrc  segment.icns  segment.rc
base/lib/score/actions/: Action.cpp  Action.hpp  ActionManager.cpp  ActionManager.hpp  Menu.hpp  MenuManager.cpp  MenuManager.hpp  Toolbar.hpp  ToolbarManager.cpp  ToolbarManager.hpp
base/lib/score/application/: ApplicationComponents.cpp  ApplicationComponents.hpp  ApplicationContext.hpp  GUIApplicationContext.hpp
base/lib/score/command/: AggregateCommand.cpp  AggregateCommand.hpp  Command.cpp  Command.hpp  CommandData.hpp  CommandGeneratorMap.hpp  CommandStackFacade.hpp  PropertyCommand.hpp  SettingsCommand.hpp
base/lib/score/document/: ChangeId.hpp  DocumentContext.hpp  DocumentInterface.hpp
base/lib/score/locking/: ObjectLocker.cpp  ObjectLocker.hpp
base/lib/score/model/: ColorReference.cpp  ColorReference.hpp  Component.cpp  Component.hpp  ComponentFactory.hpp  ComponentHierarchy.hpp  ComponentSerialization.hpp  Entity.hpp  EntityBase.hpp  EntityMap.hpp  HierarchicalModel.hpp  IdentifiedObject.hpp  IdentifiedObjectMap.hpp  (+6 more)
base/plugins/score-plugin-inspector/: score_plugin_inspector.cpp
base/plugins/segment/: CMakeLists.txt  iscore_addon_SEGMent.cpp  iscore_addon_SEGMent.hpp
base/plugins/segment/Documentation/: .gitignore
base/plugins/segment/Documentation/contributing/: AddingObjects.md  AddingProperties.md  BuildingOnMac.md  BuildingOnWindows.md
base/plugins/segment/Documentation/docs/: conf.py
base/plugins/segment/Documentation/docs/segment/: index.rst
base/plugins/segment/Documentation/docs/segment/save/: saveformat.rst
base/plugins/segment/Documentation/docs/segment/tutorial/: tutorial.rst
base/plugins/segment/Documentation/docs/segment/ui/: inspector.rst  library.rst  riddles.rst  scene.rst
base/plugins/segment/SEGMent/: Accessors.hpp  ApplicationPlugin.cpp  ApplicationPlugin.hpp  Document.cpp  Document.hpp  Exporter.hpp  FilePath.hpp  HelpWidget.hpp  ImageCache.hpp  ImageList.cpp  ImageList.hpp  ObjectCopier.hpp  ObjectPaster.hpp  SoundPlayer.hpp  StringUtils.hpp  Visitors.hpp  ZOrder.hpp
base/plugins/segment/SEGMent/Browser/: ImageList.cpp  ImageList.hpp  SoundList.cpp  SoundList.hpp  TemplateList.cpp  TemplateList.hpp
base/plugins/segment/SEGMent/Commands/: CommandFactory.hpp  Creation.hpp  Deletion.hpp  Properties.hpp  SoundCommands.hpp
base/plugins/segment/SEGMent/Inspector/: CueInspector.hpp  InspectorSetup.hpp  Inspectors.hpp
base/plugins/segment/SEGMent/Items/: Anchor.cpp  Anchor.hpp  AnchorSetter.cpp  AnchorSetter.hpp  Arrow.cpp  Arrow.hpp  ClickWindow.cpp  ClickWindow.hpp  GlobalVariables.hpp  ObjectWindow.cpp  ObjectWindow.hpp  QLineEditAutoResizeAutoCenter.cpp  QLineEditAutoResizeAutoCenter.hpp  RectItem.cpp  RectItem.hpp  SceneWindow.cpp  SceneWindow.hpp  SizeGripItem.cpp  SizeGripItem.hpp  Window.cpp  Window.hpp
base/plugins/segment/SEGMent/Model/: BackClickArea.cpp  BackClickArea.hpp  ClickArea.cpp  ClickArea.hpp  Cue.hpp  GifObject.cpp  GifObject.hpp  Image.cpp  Image.hpp  ImageModel.cpp  ImageModel.hpp  Model.hpp  ProcessMetadata.hpp  ProcessModel.cpp  ProcessModel.hpp  Riddle.cpp  Riddle.hpp  Scene.cpp  Scene.hpp  SceneDataModels.hpp  SimpleObject.cpp  SimpleObject.hpp  Sound.cpp  Sound.hpp  TextArea.cpp  TextArea.hpp  Traits.hpp  Transition.cpp  Transition.hpp  TransitionData.hpp
base/plugins/segment/SEGMent/Model/Layer/: ProcessPresenter.cpp  ProcessPresenter.hpp  ProcessView.cpp  ProcessView.hpp
base/plugins/segment/SEGMent/Panel/: Library.cpp  Library.hpp  Minimap.cpp  Minimap.hpp
base/plugins/segment/SEGMent/resources/: segment.qrc
base/plugins/segment/SEGMent/resources/translations/: fr.qm  fr.ts
ci/: appimage.build.sh  appimage.deploy.sh  archlinux.deps.sh  bionic.deps.sh  bullseye.deps.sh  buster.build.sh  buster.deps.sh  fedora.deps.sh  focal.deps.sh  mingw.build.sh  mingw.deps.sh  osx-brew.build.sh  osx-brew.deps.sh  osx-package.build.sh  osx-package.deploy.sh  osx-package.deps.sh  suse.build.sh  suse.deps.sh  tarball.build.sh  tarball.deploy.sh  ubuntu.deps.sh  win32.build.cmd  win32.deploy.sh
tools/travis/: after_succes_macos.sh  after_success_linux.sh  before_install_linux.sh  before_install_macos.sh  install_linux.sh  script_linux.sh  script_macos.sh  script_osx.sh
(+133 files in other folders)
